build_log.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. See https://docs.gradle.org/8.1.1/userguide/gradle_daemon.html#sec:disabling_the_daemon.
Daemon will be stopped at the end of the build 

> Configure project :
MixinGradle did not locate the diffplug APT plugin, skipping eclipse task configuration
Java: 21.0.9, JVM: 21.0.9+10-LTS (Eclipse Adoptium), Arch: amd64

> Task :downloadMcpConfig
> Task :extractSrg UP-TO-DATE
> Task :createMcpToSrg UP-TO-DATE

> Task :compileJava FAILED
C:\Users\alebu\Desktop\Minecraft\LinuxCraft\src\main\java\com\linuxcraft\block\ComputerBlock.java:64: error: cannot find symbol
        return InteractionResult.SIDED_SUCCESS;
                                ^
  symbol:   variable SIDED_SUCCESS
  location: class InteractionResult
Note: C:\Users\alebu\Desktop\Minecraft\LinuxCraft\src\main\java\com\linuxcraft\block\ComputerBlock.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

See https://docs.gradle.org/8.1.1/userguide/command_line_interface.html#sec:command_line_warnings

BUILD FAILED in 7s
4 actionable tasks: 2 executed, 2 up-to-date
